(re-)generated server and client stubs for ontology Jaccard similarity service
